--- a/src/main/resources/MainScene.fxml
+++ b/src/main/resources/MainScene.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="top.shotacon.application.MainScene">
+<AnchorPane prefHeight="462.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="top.shotacon.application.MainScene">
    <children>
-      <Pane prefHeight="453.0" prefWidth="754.0">
+      <Pane prefHeight="462.0" prefWidth="754.0">
          <children>
             <Button fx:id="clickButton" layoutX="646.0" layoutY="30.0" mnemonicParsing="false" onAction="#onClickButtonClick" text="ClickMe" />
             <TextField fx:id="textParam" layoutX="170.0" layoutY="30.0" prefHeight="27.0" prefWidth="462.0" />
@@ -17,12 +17,13 @@
             <Label layoutX="475.0" layoutY="74.0" prefHeight="17.0" prefWidth="38.0" text="Port:" />
             <TextField fx:id="proxyHostText" layoutX="269.0" layoutY="69.0" text="127.0.0.1" />
             <TextField fx:id="proxyPortText" layoutX="534.0" layoutY="69.0" prefHeight="27.0" prefWidth="84.0" text="8001" />
-            <TableView fx:id="tableView" editable="true" layoutX="37.0" layoutY="116.0" prefHeight="302.0" prefWidth="678.0">
+            <TableView fx:id="tableView" layoutX="37.0" layoutY="116.0" prefHeight="302.0" prefWidth="678.0">
               <columns>
-                <TableColumn fx:id="tvColumn" prefWidth="104.0" text="Column" />
-                <TableColumn fx:id="tvValue" prefWidth="571.0" text="Value" />
+                <TableColumn fx:id="tvColumn" prefWidth="104.0" sortable="false" text="Column" />
+                <TableColumn fx:id="tvValue" prefWidth="571.0" sortable="false" text="Value(双击复制到剪贴板)" />
               </columns>
             </TableView>
+            <Label fx:id="notify" layoutX="36.0" layoutY="431.0" prefHeight="17.0" prefWidth="678.0" />
          </children>
       </Pane>
    </children>
